[package]
name = "connect_four"
version = "0.1.0"
authors = ["Elias <elias_trommer@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
petgraph = "0.6.0"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["gfx"]
